gcc/testsuite/gdc.test/fail_compilation/failescape.d
/*
TEST_OUTPUT:
---
fail_compilation/failescape.d(8): Error: character '\' is not a valid token
---
*/

string x = \n;
